--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
-.home-container {
-  margin-top: 25px;
+.home-container, .post-container, .create-blog-post-container, .edit-post-container, .profile-container, .category-list-container {
+  padding-top: 90px;
 }
 
 .home-content {
@@ -19,9 +19,9 @@
   border: 1px solid #ccc;
   background-color: #fff;
   padding: 15px;
-  max-width: 750px;
   border-radius: 10px;
   overflow: hidden;
+  max-width: 750px;
   width: 100%;
 }
 
@@ -106,11 +106,59 @@
   font-size: 1.2rem;
   cursor: pointer;
 }
+
+button{
+  outline: none;
+}
+
+/* SWAL BTN */
+
+.swal2-confirm {
+  border: 0;
+  background: initial;
+  background-color: #e98580;
+  color: #fff;
+  padding: 10px;
+  border-radius: 4px;
+  font-size: 1em;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.swal2-confirm:hover {
+  opacity: 0.7;
+}
+
+.swal2-cancel {
+  border: 0;
+  background: initial;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 4px;
+  font-size: 1em;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.swal2-cancel:hover {
+  background-color: #ce236f;
+  color: #fff;
+}
+
+.swal2-confirm {
+  border: none;
+  padding: 10px 20px;
+  background: initial;
+  background-color: #ce236f;
+  color: #fff;
+  font-size: 1em;
+}
+
 /* ========== Blog Category ========== */
 
-.category-wrapper{
 
-}
 
 .blog-category {
   max-width: 100%;
