--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,13 @@
 .navbar-container{
-  
+  padding: 8px;
+  width: 100%;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 100;
+  transition: 0.5s;
+  color: #000;
+  background-color: #fff;
   box-shadow: 0 5px 5px rgb(0 0 0 / 5%);
 }
 
@@ -13,10 +21,10 @@ a {
 }
 
 .navbar-content {
-  padding: 25px;
+  padding: 15px;
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  
 }
 
 .nav-menu-list {
